# clipboard_manager

./: Cargo.toml  README.md  build.txt
src/: clipboard.rs  main.rs  models.rs  storage.rs
src/ui/: list_item.rs  mod.rs  styles.rs  window.rs
