[package]
name = "clipboard_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.7", features = ["v4_12"] }
glib = "0.18"
gdk4 = "0.7"
libadwaita = { version = "0.5", features = ["v1_4"] }
arboard = "3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"
tokio = { version = "1.35", features = ["full"] }
once_cell = "1.19"
base64 = "0.21"
image = "0.24"

[profile.release]
opt-level = 2
lto = true
