[package]
name = "clipboard_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.7", features = ["v4_12"] }
glib = "0.18"
gdk4 = "0.7"
libadwaita = { version = "0.5", features = ["v1_4"] }
arboard = "3.3"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
bincode = "1.3"
chrono = "0.4"
dirs = "5.0"
once_cell = "1.19"
base64 = "0.21"
image = "0.24"
uuid = { version = "1.6", features = ["v4"] }
parking_lot = "0.12"  
crossbeam-channel = "0.5"  

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"